# swap

./: .gitignore  Makefile.am  README.md  configure.ac
src/: Makefile.am  libswap.c  libswap_config  swap.c  swap.h  swap.pc.in
