lib_LTLIBRARIES =
include_HEADERS =
bin_PROGRAMS    =

lib_LTLIBRARIES += libswap.la
libswap_la_SOURCES = swap.c
#libswap_la_LIBADD = -lm
include_HEADERS += swap.h
#bin_PROGRAMS += swap
#swap_SOURCES = swap-test.c
#swap_LDADD = libswap.la

AM_CPPFLAGS = -D__STDC_INT64__
AM_CPPFLAGS += -I $(srcdir)/../glitter/src
